--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <div class="profile-photo-container">
-    <img src="project.jpg" alt="Aurele Karega" class="profile-photo" />
   </div>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +10,9 @@
 </head>
 <body>
   <header>
+    <div class="profile-photo-container">
+      <img src="project.jpg" alt="Aurele Karega" class="profile-photo" />
+    </div>
     <nav id="navbar">
       <div class="logo">Aurele Karega</div>
       <ul id="nav-links">
